--- a/src/component/core-css/base-styles.css
+++ b/src/component/core-css/base-styles.css
@@ -64,13 +64,13 @@ button:active {
 }
 
 .button-secondary {
-  background: #f9f9f9;
-  border-color: #f9f9f9;
+  background: #d6d6d6;
+  border-color: #d6d6d6;
   color: #000;
-  font-size: 1rem;
   font-weight: bold;
   letter-spacing: 0.05em;
   margin-right: 40px;
+  min-height: 46px;
 }
 
 .button-secondary:hover,
@@ -85,6 +85,7 @@ button:active {
   font-size: 1rem;
   font-weight: bold;
   letter-spacing: 0.05em;
+  min-height: 46px;
 }
 
 .button-link {
