--- a/src/component/core-css/reset.css
+++ b/src/component/core-css/reset.css
@@ -35,7 +35,7 @@ body {
   line-height: 1.5;
   min-height: 100vh;
   scroll-behavior: smooth;
-  text-rendering: optimizeSpeed;
+  text-rendering: optimizespeed;
 }
 
 /* A elements that don't have a class get default styles */
